wl_array arguments should be const
libwayland takes some wl_array
arguments. These could have been const
.
Unfortunately I don't think we can change that without breaking the ABI.
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
libwayland takes some wl_array
arguments. These could have been const
.
Unfortunately I don't think we can change that without breaking the ABI.