wip: make wl_array arguments const

Closes: https://gitlab.freedesktop.org/wayland/wayland/-/issues/189