src/scanner.c
@@ -1114,7 +1114,7 @@ emit_type(struct arg *a)
 		printf("struct %s *", a->interface_name);
 		break;
 	case ARRAY:
-		printf("struct wl_array *");
+		printf("const struct wl_array *");
 		break;
 	}
 }
